# L4

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  build.bat  hbentities.cpp  hbentities.h  hbmath.cpp  hbrenderer.cpp  hbship.cpp  hbtime.cpp  hbutil.h  notes.txt  ship.blend  skybox.frag  skybox.vert  triangle.vert
build_temp/: compile
code/: PlanetComponent.cpp  TransformComponent.cpp  client.cpp  client_main.cpp  entities.cpp  entity_initializers.cpp  entity_update_step.cpp  gui.cpp  handle_player_input.cpp  hb_imgui.cpp  hbclient.cpp  hbclient.h  hbentities.cpp  hbentities.h  hbentity_update_step.cpp  hbentity_update_step.h  hbgui.cpp  hbgui.h  hbkeyboard.cpp  hbkeyboard.h  hbmath.cpp  hbmath.h  hbmesh_type.h  hbnet.cpp  hbnet.h  hbnet_unix.cpp  hbpackets.cpp  hbpackets.h  hbplayer_control.cpp  hbplayer_control.h  hbprojectile.cpp  hbprojectile.h  hbrenderer.cpp  hbrenderer.h  hbship.cpp  hbship.h  hbtime.cpp  hbtime.h  hec.h  impl_imgui.cpp  (+18 more)
code/client/: client.cpp  client.h  client_logic.cpp  client_logic.h  client_main.cpp  gui.cpp  gui.h  keyboard.cpp  local_game_data.h  pipes.cpp  player_input.cpp  player_input.h  renderer.cpp  renderer.h  ship_controller.cpp  ship_controller.h
code/common/: PlanetComponent.cpp  PlanetComponent.h  ProjectileComponent.h  TransformComponent.cpp  TransformComponent.h  TransformFollowerComponent.cpp  TransformFollowerComponent.h  collision.cpp  collision.h  components.cpp  components.h  entity_initializers.cpp  entity_initializers.h  entity_update_step.cpp  gui.cpp  math.cpp  math.h  mesh.h  mesh_type.h  net.cpp  packets.cpp  packets.h  physics.cpp  physics.h  player_control.cpp  player_control.h  projectile.cpp  projectile.h  renderer.cpp  renderer.h  time.cpp  time.h  util.cpp  util.h
code/hb/: MeshComponent.h  PhysicsComponent.h  PlanetComponent.h  PlayerControlComponent.h  ProjectileComponent.h  TrackingController.h  TransformComponent.h  TransformFollowerComponent.h  client.h  client_logic.h  components.h  entities.h  entity_initializers.h  entity_update_step.h  gui.h  handle_player_input.h  keyboard.h  local_game_data.h  math.h  mesh_type.h  net.h  packets.h  physics.h  pipes.h  planet.h  player_control.h  projectile.h  renderer.h  server.h  ship.h  time.h  util.h
code/libs/: impl_libs.cpp
code/platform/: net_unix.cpp  net_windows.cpp
code/server/: server.cpp  server.h  server_main.cpp
include/: hec.h
include/ccd/: config.h
lib/: ccd.lib
models/: planet.blend  planet.blend1  projectile.blend  ship2.blend  ship2.blend1  skybox.blend  skybox.blend1
resources/: skybox.vert  triangle.frag
resources/models/: skybox.mtl
resources/shaders/: crosshair.vert  line.vert  skybox.vert  triangle.vert
vs/: .gitignore  L4.sln
vs/L4client/: L4client.vcxproj  L4client.vcxproj.filters
vs/L4common/: L4common.vcxproj  L4common.vcxproj.filters
vs/L4graphics/: L4graphics.vcxproj  L4graphics.vcxproj.filters
vs/L4server/: L4server.vcxproj  L4server.vcxproj.filters
